--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 }
 .main-section{
   height: 100vh;
-  padding-top: 250px;
+  padding-top: 306px;
   box-sizing: border-box;
   background-image: url(./../images/bg.jpg);
   background-size: cover;
@@ -21,28 +21,38 @@
  /* text-align: center; */
   padding: 0px;
   margin: 0px;
- font-size: 50px;
- text-transform: capitalize;
- color: #926239;
+  font-size: 50px;
+  text-transform: capitalize;
+  color: #926239;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
 }
 .header{
   text-align: center;
-  /* display: block; */
   width: 952px;
   padding: 0px;
   margin:0px auto;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   font-size: 20px;
   color:#926239 ;
   line-height: 32px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
 }
 .red-more{
-  
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   text-align: center;
   width: 90px;
   height: 29px;
+  display:inline-block;
       font-size: 18px;
       text-decoration: none;
       color: #926239;
