--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,11 @@
- body{
+body {
   margin: 0;
-  font-family: Arial,
-  "Helvetica Neue",
-  Helvetica,
-  sans-serif;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 17px;
   color: #926239;
   line-height: 1.6;
 }
-.main-section{
+.main-section {
   height: 100vh;
   padding-top: 306px;
   box-sizing: border-box;
@@ -17,8 +14,7 @@
   background-position: left;
   text-align: center;
 }
-.main-header{
- /* text-align: center; */
+.main-header {
   padding: 0px;
   margin: 0px;
   font-size: 50px;
@@ -29,14 +25,14 @@
   text-overflow: ellipsis;
   text-align: center;
 }
-.header{
+.header {
   padding: 0px;
-  margin:0px auto;
+  margin: 0px auto;
   margin-bottom: 5px;
   text-align: center;
   width: 952px;
   font-size: 20px;
-  color:#926239 ;
+  color: #926239;
   line-height: 32px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
@@ -45,7 +41,7 @@
   text-overflow: ellipsis;
   text-align: center;
 }
-.red-more{
+.red-more {
   margin: 0px 0px 0px 0px;
   padding: 10px 20px;
   white-space: nowrap;
@@ -54,56 +50,52 @@
   text-align: center;
   width: 90px;
   height: 29px;
-  display:inline-block;
-      font-size: 18px;
-      text-decoration: none;
-      color: #926239;
-      border: #926239 1px solid;
-      border-radius: 10px;
-      text-transform: capitalize;
+  display: inline-block;
+  font-size: 18px;
+  text-decoration: none;
+  color: #926239;
+  border: #926239 1px solid;
+  border-radius: 10px;
+  text-transform: capitalize;
 }
 
-.red-more:hover{
+.red-more:hover {
   background: #926239;
   color: #fff;
 }
 
-.article{
+.article {
   padding: 20px 20px 20px 20px;
   display: block;
   text-align: center;
   background-color: #926239;
-  color: white
+  color: white;
 }
-.article-bgc{
-  padding: 20px 20px 20px 20px;
-  display: block;
-  text-align: center;
-  background-color:white;
-  color:#926239
-}
-.header-article-one{
-  margin: 0px;
-}
-
-.inline{
-  margin: -3px;
-  width: 33%;
-  display: inline-block;
-  background-color:#926239 ;
-  color:white ;
-  text-align: left;
- 
-}
-.white{ 
+.article-bgc {
   background-color: white;
   color: #926239;
 }
-.header-article{
- text-align: center;
- margin: 0px;
+.header-article-one {
+  margin: 0px;
 }
-.text{
+
+.inline {
+  margin: -3px;
+  width: 33%;
+  display: inline-block;
+  background-color: #926239;
+  color: white;
+  text-align: left;
+}
+.white {
+  background-color: white;
+  color: #926239;
+}
+.header-article {
+  text-align: center;
+  margin: 0px;
+}
+.text {
   padding: 20px 20px 20px 20px;
   margin: 0px;
 }
